quick fix to style references to get everything running

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,30 +1,30 @@
-@import 'basscss-basic';
+@import '../../node_modules/basscss-basic';
 
 /* Add-on Modules */
-@import 'basscss-addons/modules/btn';
-@import 'basscss-addons/modules/btn-primary';
-@import 'basscss-addons/modules/background-colors';
-@import 'basscss-addons/modules/colors';
-@import 'basscss-addons/modules/forms';
-@import 'basscss-addons/modules/input-range';
-@import 'basscss-addons/modules/responsive-margin';
-@import 'basscss-addons/modules/responsive-padding';
-@import 'basscss-addons/modules/media-object';
-@import 'basscss-addons/modules/all';
-@import 'basscss-addons/modules/progress';
-@import 'basscss-addons/modules/lighten';
-@import 'basscss-addons/modules/background-images';
-@import 'basscss-addons/modules/darken';
+@import '../../node_modules/basscss-addons/modules/btn';
+@import '../../node_modules/basscss-addons/modules/btn-primary';
+@import '../../node_modules/basscss-addons/modules/background-colors';
+@import '../../node_modules/basscss-addons/modules/colors';
+@import '../../node_modules/basscss-addons/modules/forms';
+@import '../../node_modules/basscss-addons/modules/input-range';
+@import '../../node_modules/basscss-addons/modules/responsive-margin';
+@import '../../node_modules/basscss-addons/modules/responsive-padding';
+@import '../../node_modules/basscss-addons/modules/media-object';
+@import '../../node_modules/basscss-addons/modules/all';
+@import '../../node_modules/basscss-addons/modules/progress';
+@import '../../node_modules/basscss-addons/modules/lighten';
+@import '../../node_modules/basscss-addons/modules/background-images';
+@import '../../node_modules/basscss-addons/modules/darken';
 
 /* Base Modules */
-@import 'basscss-type-scale';
-@import 'basscss-typography';
-@import 'basscss-layout';
-@import 'basscss-align';
-@import 'basscss-margin';
-@import 'basscss-padding';
-@import 'basscss-grid';
-@import 'basscss-flexbox';
-@import 'basscss-position';
-@import 'basscss-border';
-@import 'basscss-hide';
+@import '../../node_modules/basscss/node_modules/basscss-type-scale';
+@import '../../node_modules/basscss/node_modules/basscss-typography';
+@import '../../node_modules/basscss/node_modules/basscss-layout';
+@import '../../node_modules/basscss/node_modules/basscss-align';
+@import '../../node_modules/basscss/node_modules/basscss-margin';
+@import '../../node_modules/basscss/node_modules/basscss-padding';
+@import '../../node_modules/basscss/node_modules/basscss-grid';
+@import '../../node_modules/basscss/node_modules/basscss-flexbox';
+@import '../../node_modules/basscss/node_modules/basscss-position';
+@import '../../node_modules/basscss/node_modules/basscss-border';
+@import '../../node_modules/basscss/node_modules/basscss-hide';
